issue fixed with navbar colour contrast and changed to more better colour which can be better

--- a/styles/before-main.css
+++ b/styles/before-main.css
@@ -86,10 +86,11 @@ a:hover, a:focus, input:focus {
 }
 
 
-.nav-link {
-  color: #ffffff; 
+.navbar-dark {
+  background-color: #003366; 
 }
 
-.navbar-dark {
-  background-color: #0056b3; 
+.navbar-dark .navbar-nav .nav-link {
+  color: #ffffff;
 }
+
